@@ -117,8 +117,7 @@
    
    <LinearLayout android:orientation="vertical"
 		android:layout_width="fill_parent" 
-		android:layout_weight="1"
-		android:layout_height="0px"
+		android:layout_height="wrap_content"
 		android:id="@+id/listing"
 		>
    
@@ -137,5 +136,23 @@
 		    />
 		    
     </LinearLayout>
+    
+     <LinearLayout android:orientation="vertical"
+		android:layout_width="fill_parent" 
+		android:layout_height="wrap_content"
+		>
+		
+    	<GridView xmlns:android="http://schemas.android.com/apk/res/android" 
+		    android:id="@+id/gridview"
+		    android:layout_width="fill_parent" 
+		    android:layout_height="wrap_content"
+		    android:columnWidth="90dp"
+		    android:numColumns="auto_fit"
+		    android:verticalSpacing="5dp"
+		    android:horizontalSpacing="5dp"
+		    android:stretchMode="columnWidth"
+		    android:gravity="center"
+		/>
+	</LinearLayout>
     
 </LinearLayout>
