@@ -9,6 +9,7 @@ import de.fmaul.android.cmis.R;
 import de.fmaul.android.cmis.repo.CmisItem;
 import de.fmaul.android.cmis.repo.CmisItemLazy;
 import de.fmaul.android.cmis.repo.CmisRepository;
+import de.fmaul.android.cmis.utils.ActionUtils;
 
 public abstract class AbstractDownloadTask extends AsyncTask<CmisItemLazy, Void, File> {
 
@@ -32,7 +33,12 @@ public abstract class AbstractDownloadTask extends AsyncTask<CmisItemLazy, Void,
 	protected File doInBackground(CmisItemLazy... params) {
 		CmisItemLazy item = params[0];
 		if (item != null) {
-			return repository.retreiveContent(item);
+			try {
+				return repository.retreiveContent(item);
+			} catch (Exception e) {
+				ActionUtils.displayError(activity, R.string.generic_error);
+				return null;
+			}
 		}
 		return null;
 	}
