@@ -34,15 +34,15 @@ import android.os.Environment;
 
 public class StorageUtils {
 
-	public static final String TYPE_FEEDS = "feeds";
-	public static final String TYPE_CONTENT = "content";
+	public static final String TYPE_FEEDS = "cache";
+	public static final String TYPE_CONTENT = "files";
 
-	public static boolean isFeedInCache(Application app, String url, String workspace) {
+	public static boolean isFeedInCache(Application app, String url, String workspace) throws StorageException {
 		File cacheFile = getFeedFile(app, workspace, md5(url));
 		return cacheFile != null && cacheFile.exists();
 	}
 
-	public static Document getFeedFromCache(Application app, String url, String workspace) {
+	public static Document getFeedFromCache(Application app, String url, String workspace) throws StorageException {
 		File cacheFile = getFeedFile(app, workspace, md5(url));
 		Document document = null;
 		SAXReader reader = new SAXReader(); // dom4j SAXReader
@@ -56,11 +56,11 @@ public class StorageUtils {
 		return document;
 	}
 
-	private static File getFeedFile(Application app, String repoId, String feedHash) {
-		return getStorageFile(repoId, TYPE_FEEDS, null, feedHash + ".xml");
+	private static File getFeedFile(Application app, String repoId, String feedHash) throws StorageException {
+		return getStorageFile(app, repoId, TYPE_FEEDS, null, feedHash + ".xml");
 	}
 
-	public static void storeFeedInCache(Application app, String url, Document doc, String workspace) {
+	public static void storeFeedInCache(Application app, String url, Document doc, String workspace) throws StorageException {
 		File cacheFile = getFeedFile(app, workspace, md5(url));
 		ensureOrCreatePathAndFile(cacheFile);
 
@@ -80,34 +80,38 @@ public class StorageUtils {
 
 	}
 
-	public static File getStorageFile(String repoId, String storageType, String itemId, String filename) {
-		StringBuilder builder = new StringBuilder();
-		builder.append(Environment.getExternalStorageDirectory());
-		builder.append("/");
-		//builder.append(app.getPackageName());
-		builder.append("android-cmis-browser");
-		builder.append("/");
-		builder.append(repoId);
-		if (storageType != null) {
+	public static File getStorageFile(Application app, String repoId, String storageType, String itemId, String filename) throws StorageException {
+		String state = Environment.getExternalStorageState();
+		if (Environment.MEDIA_MOUNTED.equals(state)) {
+			StringBuilder builder = new StringBuilder();
+			builder.append(Environment.getExternalStorageDirectory());
 			builder.append("/");
-			builder.append(storageType);
-		}
-		if (itemId != null) {
+			builder.append("Android");
 			builder.append("/");
-			builder.append(itemId.replaceAll(":", "_"));
-		}
-		if (filename != null) {
+			builder.append("data");
 			builder.append("/");
-			builder.append(filename);
+			builder.append(app.getPackageName());
+			builder.append("/");
+			if (storageType != null) {
+				builder.append("/");
+				builder.append(storageType);
+			}
+			builder.append("/");
+			builder.append(repoId);
+			if (itemId != null) {
+				builder.append("/");
+				builder.append(itemId.replaceAll(":", "_"));
+			}
+			if (filename != null) {
+				builder.append("/");
+				builder.append(filename);
+			}
+			return new File(builder.toString());
+		} else if (Environment.MEDIA_MOUNTED_READ_ONLY.equals(state)) {
+			throw new StorageException("Storage in Read Only Mode");
+		} else {
+			throw new StorageException("Storage is unavailable");
 		}
-		return new File(builder.toString());
-	}
-
-	public static File createStorageFile(Application app, String repoId, String storageType, String itemId, String filename) {
-
-		File contentFile = getStorageFile(repoId, storageType, itemId, filename);
-		ensureOrCreatePathAndFile(contentFile);
-		return contentFile;
 	}
 
 	private static void ensureOrCreatePathAndFile(File contentFile) {
@@ -138,8 +142,8 @@ public class StorageUtils {
 		return "";
 	}
 
-	public static boolean deleteRepositoryFiles(Application app, String repoId) {
-		File repoDir = getStorageFile(repoId, null, null, null);
+	public static boolean deleteRepositoryFiles(Application app, String repoId) throws StorageException {
+		File repoDir = getStorageFile(app, repoId, TYPE_FEEDS, null, null);
 		try {
 			FileUtils.deleteDirectory(repoDir);
 			return true;
@@ -148,9 +152,9 @@ public class StorageUtils {
 		}
 	}
 
-	public static boolean deleteRepositoryCacheFiles(Application app, String repoId) {
-		File contentDir = getStorageFile(repoId, TYPE_CONTENT, null, null);
-		File feedsDir = getStorageFile(repoId, TYPE_FEEDS, null, null);
+	public static boolean deleteRepositoryCacheFiles(Application app, String repoId) throws StorageException {
+		File contentDir = getStorageFile(app, repoId, TYPE_CONTENT, null, null);
+		File feedsDir = getStorageFile(app, repoId, TYPE_FEEDS, null, null);
 		try {
 			FileUtils.deleteDirectory(contentDir);
 			FileUtils.deleteDirectory(feedsDir);
@@ -160,8 +164,8 @@ public class StorageUtils {
 		}
 	}
 	
-	public static boolean deleteFeedFile(String repoId, String url) {
-		File feedFile = getStorageFile(repoId, TYPE_FEEDS, null,  md5(url));
+	public static boolean deleteFeedFile(Application app, String repoId, String url) throws StorageException {
+		File feedFile = getStorageFile(app, repoId, TYPE_FEEDS, null,  md5(url));
 		try {
 			FileUtils.deleteDirectory(feedFile);
 			return true;
@@ -169,5 +173,4 @@ public class StorageUtils {
 			return false;
 		}
 	}
-
 }
